<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ABC iview</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="channels">Channels</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="title_activity_channel">ChannelActivity</string>
    <string name="search_hint">
        <i>Enter Search Term</i>
    </string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="categories">Search</string>
    <string name="unexpected_intent_action">Unexpected intent action:
        <xliff:g id="action">%1$s</xliff:g>
    </string>

    <string name="error_cleartext_not_permitted">Cleartext traffic not permitted</string>

    <string name="error_generic">Playback failed</string>

    <string name="error_unrecognized_abr_algorithm">Unrecognized ABR algorithm</string>

    <string name="error_unrecognized_stereo_mode">Unrecognized stereo mode</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for
        <xliff:g id="mime_type">%1$s</xliff:g>
    </string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for
        <xliff:g id="mime_type">%1$s</xliff:g>
    </string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder
        <xliff:g id="decoder_name">%1$s</xliff:g>
    </string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>

    <string name="ima_not_loaded">Playing sample without ads, as the IMA extension was not loaded</string>

    <string name="download_start_error">Failed to start download</string>

    <string name="download_playlist_unsupported">This demo app does not support downloading playlists</string>

    <string name="download_drm_unsupported">This demo app does not support downloading protected content</string>

    <string name="download_scheme_unsupported">This demo app only supports downloading http streams</string>

    <string name="download_ads_unsupported">IMA does not support offline ads</string>

    <string name="prefer_extension_decoders">Prefer extension decoders</string>

    <string name="random_abr">Enable random ABR</string>
    <string name="recently_watched">Recently Watched</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="view_favourites">View Favourites</string>
    <string name="remove">Remove From Recently Watched</string>

</resources>
