<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_channels"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/channels" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/categories" />
    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/favourites" />


    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />

</menu>
